--- a/sys/i18n/embed/zh.toml
+++ b/sys/i18n/embed/zh.toml
@@ -17,3 +17,5 @@ other = "Jaeger"
 other = "Openapi开发文档"
 [permission.sys.dev.jobs]
 other = "后台任务"
+[permission.sys.dev.events.kafka]
+other = "Kafka"
