fix: locale and table

--- a/saas/i18n/embed/en.toml
+++ b/saas/i18n/embed/en.toml
@@ -5,6 +5,11 @@ other = "Tenant Name Used"
 [TenantForbidden]
 other = "Tenant Forbidden"
 
+[AdminUsernameInvalid]
+other = "Administrator Username Invalid"
+[AdminEmailInvalid]
+other = "Administrator Email Invalid"
+
 [permission.saas.tenant.group]
 other = "Tenant"
 [permission.saas.tenant.read]
