feat: add dtm ui

--- a/sys/i18n/embed/en-US.toml
+++ b/sys/i18n/embed/en-US.toml
@@ -22,3 +22,5 @@ other = "Openapi Docs"
 other = "Background Jobs"
 [permission.sys.dev.events.kafka]
 other = "Kafka"
+[permission.sys.dev.dtm]
+other = "Dtm"
