feat: dtm integration

--- a/sys/i18n/embed/en-US.toml
+++ b/sys/i18n/embed/en-US.toml
@@ -1,6 +1,9 @@
 [MenuNameDuplicate]
 other = "Menu Name is used"
 
+[dev.dtm]
+other = "Distributed Transaction"
+
 [permission.sys.menu.group]
 other = "Menu"
 [permission.sys.menu.read]
