--- a/product/i18n/embed/en-US.toml
+++ b/product/i18n/embed/en-US.toml
@@ -13,3 +13,6 @@ other = "Delete Product"
 other = "Product Management"
 [product.product]
 other = "Product List"
+
+[ProductManaged]
+other = "Product is managed!"
