--- a/docs/docs/01-intro/01-overview.mdx
+++ b/docs/docs/01-intro/01-overview.mdx
@@ -1,3 +1,9 @@
 ---
 sidebar_label: Overview
 ---
+
+GO-SAAS-KIT is a project built on the Go programming language with the aim of helping developers quickly create and sell Software as a Service (SaaS) solutions. While Go is renowned for its excellent performance, building a full-fledged SaaS application often entails starting from scratch and implementing numerous functionalities such as user authentication, registration, and more. Unlike traditional web frameworks, GO-SAAS-KIT is built on top of popular frameworks and middleware to provide common features and solutions required for SaaS services.
+
+This project can be seen as an inspirational template that showcases best practices and approaches for building SaaS applications using the Go language. It is not a full-fledged framework but rather a starting point with essential features that developers can extend and customize according to their specific requirements. These features include user management, permission control, data storage, RESTful API design, and more.
+
+During the development of GO-SAAS-KIT, we not only focus on solutions to common problems but also actively contribute bug fixes and feature implementations to upstream projects. Additionally, we innovate when addressing certain unique challenges to ensure that SaaS developers can start building their projects more easily.
