--- a/docs/docs/01-intro/03-frontend.mdx
+++ b/docs/docs/01-intro/03-frontend.mdx
@@ -1,3 +1,38 @@
 ---
 sidebar_label: Frontend
+title: Frontend
 ---
+
+As front-end and back-end development becomes increasingly complex, it's common for teams to have separate individuals responsible for front-end and back-end tasks.
+However, in practice, solving specific problems often requires collaboration between front-end and back-end developers. Therefore, collaboration between front-end and back-end becomes crucial.
+
+Before you begin, you need to grasp the following fundamental concepts: [RESTful API](https://aws.amazon.com/what-is/restful-api/) and [OpenAPI](https://www.openapis.org/what-is-openapi).
+
+1. **RESTful API (Representational State Transfer API):** REST is an architectural style based on the HTTP protocol used for building distributed systems and web applications. A RESTful API is an API designed following the principles of REST. It utilizes HTTP requests for communication and employs a standardized set of operations (e.g., GET, POST, PUT, DELETE) to access and manipulate resources. RESTful APIs are a flexible and widely-used approach for creating web services, adhering to the concepts of resources and state, simplifying communication between clients and servers.
+
+2. **OpenAPI:** OpenAPI is a standard specification for describing and documenting RESTful APIs. It defines the structure, endpoints, parameters, responses, and other related information of an API in a machine-readable and human-readable format. OpenAPI specifications are typically written in JSON or YAML and can be provided as part of API documentation to help developers understand how to use the API effectively. The goal of OpenAPI is to provide a consistent way to describe APIs, facilitate API interaction and integration, and enable the generation of client libraries and server code automatically.
+
+:::tip
+Personally, I believe that most individuals in a development team should have their own areas of expertise (either front-end or back-end), while also possessing foundational knowledge in the other domain. This not only helps you independently solve certain problems but also facilitates better collaboration and communication with others.
+
+:::
+
+## Admin-UI
+
+The source code of Admin-UI is located at https://github.com/go-saas/kit-frontend
+
+It is developed by using [React](https://react.dev/) and [Ant Design Pro](https://github.com/ant-design/ant-design-pro).
+
+For more information, go to [frontend](../learn/frontend/react)
+
+## Mobile Apps
+
+The source code of mobile app is located at 
+
+[Flutter](https://flutter.dev/) 
+
+>Flutter transforms the app development process. Build, test, and deploy beautiful mobile, web, desktop, and embedded apps from a single codebase.
+
+For more information, go to [flutter](../learn/frontend/flutter)
+
+There is a demo https://github.com/go-saas/commerce-app
