--- a/docs/docs/01-intro/04-develop.mdx
+++ b/docs/docs/01-intro/04-develop.mdx
@@ -1,3 +1,21 @@
 ---
-sidebar_label: Develop your own services
+sidebar_label: Customize & Develop
+title: Customize & Develop
 ---
+
+## Customize
+
+You can checkout [commerce](https://github.com/go-saas/commerce) to see how to customize existing modules 
+https://github.com/go-saas/commerce/tree/main/user
+
+For more information, go to [customize existing modules](../modules/customize)
+
+## Develop your own services
+
+The creation of new services is powered by [kratos layout](https://go-kratos.dev/en/docs/getting-started/start/#project-layout)
+
+```shell
+kratos new <name> -r https://github.com/go-saas/kit-layout.git
+```
+
+For more information, go to [create your own module](../modules/create-yor-own)
