--- a/docs/i18n/zh-Hans/docusaurus-plugin-content-docs/current.json
+++ b/docs/i18n/zh-Hans/docusaurus-plugin-content-docs/current.json
@@ -1,6 +1,6 @@
 {
     "version.label": {
-        "message": "接下来",
+        "message": "下一步",
         "description": " "
     },
     "sidebar.docs.category.Introduction": {
