--- a/docs/docs/01-intro/04-develop.mdx
+++ b/docs/docs/01-intro/04-develop.mdx
@@ -18,4 +18,4 @@ The creation of new services is powered by [kratos layout](https://go-kratos.dev
 kratos new <name> -r https://github.com/go-saas/kit-layout.git
 ```
 
-For more information, go to [create your own module](../modules/create-yor-own)
+For more information, go to [create your own module](../modules/create-your-own)
