--- a/docs/docs/02-learn/01-fundamentals/01-di.mdx
+++ b/docs/docs/02-learn/01-fundamentals/01-di.mdx
@@ -1,3 +1,6 @@
 ---
 sidebar_label: Dependcy Injection
+title: Dependcy Injection
 ---
+
+Dependency Injection (DI) is a technique used in software development to manage dependencies between different components or classes. It involves providing dependencies to a class from the outside, rather than the class creating them internally. This enhances flexibility, testability, and maintainability of the code. 
