--- a/docs/docs/01-intro/02-architecture.mdx
+++ b/docs/docs/01-intro/02-architecture.mdx
@@ -41,7 +41,7 @@ You may also see some other folders that not being listed:
 
 :::tip
 
-You may find some concepts to be different from Kratos when using go-saas-kit; consider this as the reference.
+You may find some concepts to be different from [Kratos](https://github.com/go-kratos/kratos) when using go-saas-kit; consider this as the reference.
 
 :::
 
