--- a/docs/docs/01-intro/01-overview.mdx
+++ b/docs/docs/01-intro/01-overview.mdx
@@ -29,6 +29,6 @@ During the development of GO-SAAS-KIT, we not only focus on solutions to common 
 
 1. **Already Using Other Microservices Frameworks like [go-zero](https://github.com/zeromicro/go-zero) or [go-micro](https://github.com/go-micro/go-micro):** If you're already using other microservices frameworks to build services, introducing go-saas-kit might introduce unnecessary complexity. In this case, continuing to use your current framework might be more suitable. You can checkout [go-saas/saas](https://github.com/go-saas/saas)
 
-2. **Disliking ORM Frameworks:** If you have a dislike for ORM (Object-Relational Mapping) frameworks, as go-saas-kit may depend on ORM frameworks, you might want to consider alternative approaches for building your SaaS application.
+2. **Disliking ORM Frameworks:** If you have a dislike for ORM (Object-Relational Mapping) frameworks, as go-saas-kit may depend on ORM frameworks, you might want to consider alternative approaches for building your SaaS application. You may also want to use Postgresql Pool with row level security, see https://github.com/go-saas/saas/issues/16
 
 Please carefully consider whether to use go-saas-kit based on your specific requirements and project context to ensure the best development experience and system architecture.
