--- a/docs/docs/02-learn/01-fundamentals/17-protobuf.mdx
+++ b/docs/docs/02-learn/01-fundamentals/17-protobuf.mdx
@@ -1,3 +1,19 @@
+---
+sidebar_label: Protobuf
+title: Protobuf
+---
+Protocol Buffers, often abbreviated as Protobuf, is a language-agnostic, binary serialization format developed by Google. It is used for efficiently and reliably serializing structured data, making it easier to exchange data between different systems, applications, or programming languages. 
+
+:::tip
+Protobuf is a first-class citizen of kit. It is essential for you to master it.
+:::
+
+We use it in these sections
+- [Cache](./cache)
+- [Configuration](./configuration)
+- [BackgroundJob](./background-job)
+- Api
+- RPC
 
 ## Grpc
 
