--- a/docs/docs/02-learn/01-fundamentals/03-authentication.mdx
+++ b/docs/docs/02-learn/01-fundamentals/03-authentication.mdx
@@ -15,7 +15,7 @@ We use [go-saas/sessions](https://github.com/go-saas/sessions), a forked version
 
 ## JWT
 
-We use [golang-jwt/jwt](github.com/golang-jwt/jwt) to extract and generate claims
+We use [golang-jwt/jwt](https://github.com/golang-jwt/jwt) to extract and generate claims
 
 claims:
 
