--- a/docs/docs/02-learn/01-fundamentals/05-vfs.mdx
+++ b/docs/docs/02-learn/01-fundamentals/05-vfs.mdx
@@ -34,7 +34,7 @@ data:
       os:
         dir: ".assets"
     -
-      public_url: http://localhost/assets
+      public_url: http://xxx.s3.amazon.xxxxx
       mount_path: "/s3"
       s3:
         region: "xxx"
